--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -4,8 +4,32 @@
   left: 0;
   width: 100%;
   height: 56px;
-  background-color: #CB7CFF;
+  background-color: #00D8FF;
   color: #FFF090;
-  font-size: 32px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: 'VT323', monospace;
+  font-size: 36px;
+  &:hover {
+    cursor: pointer;
+  }
 }
 
+.logo-wrapper {
+  font-size: 48px;
+  padding: .25rem 1rem
+}
+
+.logout-nav {
+  margin: 0 2rem;
+  padding: .25rem .50rem;
+  font-size: 30px;
+  font-weight: 400;
+  background-color: #FF78D8;
+  border: solid 1px #8C4276;
+  &:hover {
+    background-color: #8C4276;
+    cursor: pointer;
+  }
+}
