--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -4,8 +4,8 @@
   left: 0;
   width: 100%;
   height: 56px;
-  background-color: #00D8FF;
-  color: #FFF090;
+  background-color: #0E1428;
+  color: #D4F2D2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -23,13 +23,14 @@
 
 .logout-nav {
   margin: 0 2rem;
-  padding: .25rem .50rem;
+  padding: .25rem .750rem;
   font-size: 30px;
   font-weight: 400;
-  background-color: #FF78D8;
-  border: solid 1px #8C4276;
+  background-color: #6E7DAB;
+  border: solid #6E7DAB 1px;
+  border-radius: 3px;
   &:hover {
-    background-color: #8C4276;
+    background-color: #575366;
     cursor: pointer;
   }
 }
