--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -1,2 +1,6 @@
 @import "reset.scss";
 @import "nav.scss";
+@import "main.scss";
+@import "session.scss";
+@import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
