--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -11,20 +11,20 @@
   align-items: center;
   font-family: 'VT323', monospace;
   font-size: 36px;
+}
+
+.logo-wrapper {
+  font-size: 48px;
+  padding: .25rem 1rem;
   &:hover {
     cursor: pointer;
   }
 }
 
-.logo-wrapper {
-  font-size: 48px;
-  padding: .25rem 1rem
-}
-
 .logout-nav {
-  margin: 0 2rem;
+  margin: 0 1rem;
   padding: .25rem .750rem;
-  font-size: 30px;
+  font-size: 24px;
   font-weight: 400;
   background-color: #6E7DAB;
   border: solid #6E7DAB 1px;
