--- a/client/src/stylesheets/session.scss
+++ b/client/src/stylesheets/session.scss
@@ -1,3 +1,71 @@
 .session-form {
-  
+  width: 480px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #575366;
+  color: #D4F2D2;
+  border-radius: 5px;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);
+}
+
+.signup-page {
+  display: flex; 
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 45rem;
+}
+
+.session-input {
+  background-color: #32292F;
+  padding: 10px 15px;
+  width: 400px;
+  border: 1px solid #0E1428;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  border-radius: 3px;
+}
+
+.session-header {
+  font-size: 24px;
+  font-weight: 700;
+  margin: 10px 0 30px 0;
+}
+
+.input-wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.session-label {
+  margin-bottom: 10px;
+}
+
+.session-button {
+  background-color: #D4F2D2;
+  color: #32292F;
+  width: 400px;
+  padding: 10px 15px;
+  display: flex;
+  flex-direction: column;
+  justify-self: center;
+  align-items: center;
+  border-radius: 3px;
+  margin: 20px 0 30px 0;
+}
+
+.session-errors {
+  color: red;
+  text-transform: capitalize;
+  font-style: italic;
+  font-weight: 700;
 }
