--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -24,10 +24,11 @@
 .logout-nav {
   margin: 0 1rem;
   padding: .25rem .750rem;
-  font-size: 24px;
-  font-weight: 400;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-weight: 700;
   background-color: #6E7DAB;
-  border: solid #6E7DAB 1px;
+  border: solid #575366 1px;
   border-radius: 3px;
   &:hover {
     background-color: #575366;
