--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -2,5 +2,6 @@
 @import "nav.scss";
 @import "main.scss";
 @import "session.scss";
+@import "sidebar.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
