--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -11,17 +11,33 @@
   align-items: center;
   font-family: 'VT323', monospace;
   font-size: 36px;
+  box-sizing: border-box;
 }
 
 .logo-wrapper {
+  display: flex;
+  justify-self: center;
+  align-items: center;
   font-size: 48px;
-  padding: .25rem 1rem;
+  padding: 0rem 0rem;
+  margin-left: 2rem;
   &:hover {
     cursor: pointer;
   }
 }
 
+.left-nav {
+  display: flex;
+  justify-self: center;
+  align-items: center;
+  margin: 0 1rem;
+  padding: .25rem .750rem;
+}
+
 .logout-nav {
+  display: flex;
+  justify-self: center;
+  align-items: center;
   margin: 0 1rem;
   padding: .25rem .750rem;
   font-family: 'Roboto', sans-serif;
@@ -34,4 +50,9 @@
     background-color: #575366;
     cursor: pointer;
   }
+}
+
+.spacer {
+  height: 56px;
+  width: 100%;
 }
