--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -7,6 +7,28 @@ html, body, #root {
 //     height: 100vh;
 // }
 
+.scroll-bar {
+  html {
+    --scrollbarBG: #0E1428;
+    --thumbBG: #D4F2D2;
+  }
+  body::-webkit-scrollbar {
+    width: 11px;
+  }
+  body {
+    scrollbar-width: thin;
+    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+  }
+  body::-webkit-scrollbar-track {
+    background: var(--scrollbarBG);
+  }
+  body::-webkit-scrollbar-thumb {
+    background-color: var(--thumbBG) ;
+    border-radius: 6px;
+    border: 3px solid var(--scrollbarBG);
+  }
+}
+
 .main {
   background-color: #63768D;
   height: 100vh;
