--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -5,4 +5,23 @@
   width: 25%;
   max-width: 300px;
   min-width: 200px;
+  overflow: scroll;
 }
+
+.sidebar-wrapper::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+  border-radius: 10px;
+  background-color: #0E1428;
+}
+
+.sidebar-wrapper::-webkit-scrollbar {
+  width: 12px;
+  background-color: #0E1428;
+}
+
+.sidebar-wrapper::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
+  background-color: #D4F2D2;
+}
+
