--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -31,7 +31,8 @@
   justify-self: center;
   align-items: center;
   margin: 0 1rem;
-  padding: .25rem .750rem;
+  padding: .25rem .250rem;
+  font-size: 26px;
 }
 
 .logout-nav {
