--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -8,6 +8,11 @@
   overflow: scroll;
 }
 
+.user-list-wrapper {
+  padding-left: 2rem;
+  color: #0E1428;
+}
+
 .sidebar-wrapper::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
   border-radius: 10px;
