--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -8,27 +8,28 @@ html, body, #root {
 // }
 
 .scroll-bar {
-  html {
-    --scrollbarBG: #0E1428;
-    --thumbBG: #D4F2D2;
-  }
-  body::-webkit-scrollbar {
-    width: 11px;
-  }
-  body {
-    scrollbar-width: thin;
-    scrollbar-color: var(--thumbBG) var(--scrollbarBG);
-  }
-  body::-webkit-scrollbar-track {
-    background: var(--scrollbarBG);
-  }
-  body::-webkit-scrollbar-thumb {
-    background-color: var(--thumbBG) ;
-    border-radius: 6px;
-    border: 3px solid var(--scrollbarBG);
-  }
+
 }
 
+.scroll-bar {
+  --scrollbarBG: #0E1428;
+  --thumbBG: #D4F2D2;
+}
+.scroll-bar::-webkit-scrollbar {
+  width: 11px;
+}
+.scroll-bar {
+  scrollbar-width: thin;
+  scrollbar-color: var(--thumbBG) var(--scrollbarBG);
+}
+.scroll-bar::-webkit-scrollbar-track {
+  background: var(--scrollbarBG);
+}
+.scroll-bar::-webkit-scrollbar-thumb {
+  background-color: var(--thumbBG) ;
+  border-radius: 6px;
+  border: 3px solid var(--scrollbarBG);
+}
 .main {
   background-color: #63768D;
   height: 100vh;
@@ -36,4 +37,13 @@ html, body, #root {
   display: flex;
   flex-wrap: wrap;
   overflow: hidden;
+}
+
+.global-main {
+  box-sizing: content-box;
+  display: flex;
+  height: 94vh;
+  max-height: 94vh;
+  width: 100%;
+  overflow-y: hidden;
 }
