--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -3,7 +3,8 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 56px;
+  min-height: 56px;
+  height: 6vh;
   background-color: #0E1428;
   color: #D4F2D2;
   display: flex;
@@ -20,7 +21,7 @@
   align-items: center;
   font-size: 48px;
   padding: 0rem 0rem;
-  margin-left: 2rem;
+  margin-right: 3rem;
   &:hover {
     cursor: pointer;
   }
