--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -1,11 +1,13 @@
 .sidebar-wrapper {
   display: flex;
-  height: 100%;
+  // height: 94vh;
+  max-height: 100%;;
   background-color: #E4E6C3;
   width: 25%;
   max-width: 300px;
   min-width: 200px;
-  overflow: scroll;
+  overflow-y: scroll;
+
 }
 
 .user-list-wrapper {
