--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -1,9 +1,9 @@
 .sidebar-wrapper {
   display: flex;
-  // height: 94vh;
-  max-height: 100%;;
+  flex-direction: column;
+  height: 100%;
   background-color: #E4E6C3;
-  width: 25%;
+  flex: 1;
   max-width: 300px;
   min-width: 200px;
   overflow-y: scroll;
