--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -4,5 +4,7 @@
 @import "session.scss";
 @import "sidebar.scss";
 @import "chat.scss";
+@import "prism.scss";
+@import "editor.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
