--- a/client/src/stylesheets/chat.scss
+++ b/client/src/stylesheets/chat.scss
@@ -7,11 +7,12 @@
 .chat-main {
   width: 100%;
   color: #D4F2D2;
+  // display: flex;
 }
 
 .chatview-wrapper {
   width: 100%;
-  height: 90%;
+  height: calc(100% - 80px);
   background-color: #63768D;
   display: flex;
   justify-content: center;
@@ -73,7 +74,8 @@
 
 .text-editor-wrapper {
   width: 100%;
-  height: 10%;
+  height: 80px;
+  min-height: 80px;
   border-top: #0E1428 4px solid;
   box-sizing: border-box;
   background-color: #575366;
@@ -84,10 +86,9 @@
 .text-editor-form {
   width: 100%;
   display: flex;
-  height: 20px;
-  display: flex;
   justify-content: center;
   align-items: center;
+  height: fit-content;
 }
 
 .text-input-area {
@@ -97,6 +98,6 @@
   justify-self: center;
   align-items: center;
   border-radius: 3px;
-  padding: 15px;
+  padding: 10px;
   width: 96%;
 }
