--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -7,5 +7,6 @@
 @import "playerscreen.scss";
 @import "prism.scss";
 @import "editor.scss";
+@import "modal.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
