--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -13,6 +13,10 @@
 .user-list-wrapper {
   padding-left: 2rem;
   color: #0E1428;
+} 
+
+.user-list-item {
+  cursor: pointer;
 }
 
 .sidebar-wrapper::-webkit-scrollbar-track {
