--- a/client/src/stylesheets/editor.scss
+++ b/client/src/stylesheets/editor.scss
@@ -1,6 +1,8 @@
 .editor {
   background-color: #f5f2f0;
   width: 70%;
-  min-height: 300px;
-  margin: 5px;
+  min-height: 400px;
+  margin: 6px;
+  margin-bottom: 10px;
+  border-radius: 5px;
 }
