--- a/client/src/stylesheets/playerscreen.scss
+++ b/client/src/stylesheets/playerscreen.scss
@@ -4,13 +4,13 @@
   color: #D4F2D2;
   margin: 5px;
   margin-left: 7px;
-  margin-top: -40px;
+  // margin-top: -40px;
   padding: 5px;
   background-color: #575366;
   box-sizing:border-box;
   overflow-y: scroll;
   max-height: 200px;
-  z-index: 5;
+  border-radius: 5px;
 }
 
 
