question box styling

--- a/client/src/stylesheets/playerscreen.scss
+++ b/client/src/stylesheets/playerscreen.scss
@@ -4,8 +4,8 @@
   color: #D4F2D2;
   margin: 5px;
   margin-left: 7px;
-  // margin-top: -40px;
-  padding: 5px;
+  text-align: center;
+  padding: 4px;
   background-color: #575366;
   box-sizing:border-box;
   overflow-y: scroll;
