--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -28,12 +28,18 @@ html, body, #root {
 }
 .main {
   background-color: #63768D;
-  height: 100vh;
   font-family: 'Roboto', sans-serif;
   display: flex;
   flex-wrap: wrap;
-  overflow: hidden;
-  overflow-y: scroll;
+  min-width: fit-content;
+  height: fit-content;
+}
+
+.main-sub {
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  height: 100vh;
 }
 
 .global-main {
