Continue to style game page

--- a/client/src/stylesheets/editor.scss
+++ b/client/src/stylesheets/editor.scss
@@ -19,6 +19,8 @@
   min-height: 420px;
   min-width: 500px;
   width: 100%;
+  font-size: 13px;
+  // background-color: #E4E6C3;
 }
 
 .editor-counts {
