Rearrange styles on third screen (game screen)

--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -4,10 +4,10 @@
 @import "session.scss";
 @import "sidebar.scss";
 @import "chat.scss";
-@import "playerscreen.scss";
+@import "gamescreen.scss";
 @import "prism.scss";
 @import "modal.scss";
 @import "editor.scss";
-@import "playerchat.scss";
+@import "gamechat.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
