Set up conditions for errors and test results

--- a/client/src/stylesheets/gamescreen.scss
+++ b/client/src/stylesheets/gamescreen.scss
@@ -117,3 +117,9 @@
   justify-content: center;
   align-items: center;
 }
+
+.stats-results {
+  display: flex;
+  justify-content: center;
+  align-self: center;
+}
