--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -9,5 +9,6 @@
 @import "modal.scss";
 @import "editor.scss";
 @import "gamechat.scss";
+@import "spectator.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
