--- a/client/src/stylesheets/gamescreen.scss
+++ b/client/src/stylesheets/gamescreen.scss
@@ -106,7 +106,7 @@
   justify-content: center;
   align-items: flex-start;
   flex-wrap: wrap;
-  margin-top: 16px;
+  margin-top: 23px;
 }
 
 .challenge-question-wrapper {
@@ -145,13 +145,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  width: 100%;
+  width: 80%;
 }
 
 .player-stats-game-wrapper {
   display: flex;
-  align-items: flex-start;
-  width: 80%;
-  height: 100%;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
 }
