--- a/client/src/stylesheets/spectator.scss
+++ b/client/src/stylesheets/spectator.scss
@@ -2,13 +2,12 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  height: calc(100vh - 56px);
   flex-direction: column;
+  justify-content: space-between;
 }
 
 .screen-top {
   display: flex;
-  height: 50%;
   width: 100%;
   justify-content: center;
   align-items: center;
@@ -18,34 +17,28 @@
   flex-direction: column;
   display: flex;
   width: 60%;
-  height: 100%;
 }
 
 .spectator-player2 {
   flex-direction: column;
   display: flex;
   width: 40%;
-  height: 100%;
 }
 
 .player-title {
   width: 100%;
-  height: 10%;
 }
 
 .player-components {
   display: flex;
-  height: 100%;
 }
 .player-stats {
   display: flex;
   width: 33%;
-  height: 70%;
 }
 
 .code-editor-wrapper-spectator {
   width: 67%;
-  height: 55%;
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -55,12 +48,12 @@
 
 .screen-bottom {
   display: flex;
-  height: 50%;
+  box-sizing: border-box;
+  flex: 1;
 }
 
 .challenge-question-wrapper-spectator {
   display: flex;
-  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -68,7 +61,13 @@
 }
 
 .game-chat-wrapper-spectator {
-  height: 100%;
-  min-height: 400px;
   width: 150%;
+}
+
+.main-spectator {
+  background-color: #63768D;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: calc(100vh - 56px);
 }
