--- a/client/src/stylesheets/editor.scss
+++ b/client/src/stylesheets/editor.scss
@@ -1,12 +1,13 @@
 .editor {
   background-color: #f5f2f0;
-  width: 90%;
-  min-height: 400px;
   border-radius: 5px;
   display: flex;
-  align-items: space-around;
   flex-direction: column;
-  height: 75%;
+  height: 100%;
+  min-height: 200px;
+  // height: 400px;
+  width: 100%;
+  margin: 20px;
 }
 
 .editor-info {
@@ -16,7 +17,6 @@
 }
 
 .editorPre {
-  min-height: 420px;
   min-width: 500px;
   width: 100%;
   font-size: 13px;
