--- a/client/src/stylesheets/gamescreen.scss
+++ b/client/src/stylesheets/gamescreen.scss
@@ -2,26 +2,26 @@
   color: #D4F2D2;
   text-align: center;
   background-color: #575366;
-  box-sizing:border-box;
+  box-sizing: border-box;
   border-radius: 5px;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
   flex-wrap: wrap;
-  height: 90%;
-  width: 90%;
-  box-shadow: 0 2px 10px 0 rgba(0,0,0,.2);
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
   padding: 7px;
   font-size: 18px;
+  height: 400px;
+  margin: 20px 26px 0;
 }
 
 .stats-wrapper {
-  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
+  flex: 1;
 }
 
 .stats-players {
@@ -29,13 +29,13 @@
   justify-content: center;
   align-items: center;
   width: 50%;
-  height: 100%;
 }
 
 .stats-form{
+  min-width: 150px;
   width: 90%;
+  margin: 0 5px;
   background-color: #32292F;
-  height: 80%;
   justify-content: center;
   align-items: center;
   border: 1px solid #0E1428;
@@ -54,9 +54,12 @@
     
   }
   .stats{
-  // background-color: gray;
   text-align: left;
   padding: 5px;
+  height: 180px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
   }
 }
 
@@ -64,35 +67,36 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  height: 893px;
+  min-height: calc(100vh - 56px);
 }
 
 .game-left {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: center;
-  min-width: 500px;
-  width: 50%;
+  flex-direction: column;
+  // min-width: 500px;
+  flex: 1;
   box-sizing: border-box;
-  height: 100%;
-  min-height: 600px;
+  // min-height: 600px;
 }
 
 .game-right {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  width: 50%;
+  justify-content: space-between;
+  align-items: flex-end;
+  flex-direction: column;
   min-width: 500px;
   box-sizing: border-box;
+  flex: 1;
+  // min-height: 600px;
+  background-color: #63768D;
 }
 
 .game-chat-wrapper {
-  height: 50%;
-  min-height: 400px;
+  display: flex;
   width: 100%;
+  height: 50%;
 }
 
 #game-chat {
@@ -100,29 +104,26 @@
 }
 
 .code-editor-wrapper {
-  width: 100%;
-  height: 55%;
   display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin-top: 16px;
+  align-items: center;
+  flex: 1.5;
+  flex-direction: column;
+  width: 95%;
+  max-width: 800px;
+  margin-bottom: 20px;
 }
 
 .challenge-question-wrapper {
   display: flex;
-  height: 50%;
-  width: 100%;
-  display: flex;
   justify-content: center;
   align-items: center;
+  width: 100%;
 }
 
 .stats-results {
   display: flex;
   justify-content: center;
   margin-top: 10px;
-  height: 80px;
   flex-wrap: wrap;
   h2 {
     width: 60%;
@@ -135,6 +136,7 @@
     color: #0E1428;
     border-radius: 4px;
     padding: 3px 0;
+    margin-bottom: 8px;;
     &:hover {
       cursor: pointer;
     }
@@ -145,13 +147,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 80%;
-  width: 100%;
+  width: 80%;
 }
 
 .player-stats-game-wrapper {
   display: flex;
-  align-items: flex-start;
-  width: 80%;
+  align-items: center;
+  width: 100%;
+  justify-content: center;
   height: 100%;
+  flex: 1;
 }
