--- a/client/src/stylesheets/spectator.scss
+++ b/client/src/stylesheets/spectator.scss
@@ -2,73 +2,69 @@
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  height: calc(100vh - 56px);
   flex-direction: column;
 }
 
 .screen-top {
   display: flex;
-  height: 50%;
-  width: 100%;
   justify-content: center;
   align-items: center;
-}
-
-.spectator-player1 {
-  flex-direction: column;
-  display: flex;
-  width: 60%;
-  height: 100%;
-}
-
-.spectator-player2 {
-  flex-direction: column;
-  display: flex;
-  width: 40%;
-  height: 100%;
-}
-
-.player-title {
-  width: 100%;
-  height: 10%;
-}
-
-.player-components {
-  display: flex;
-  height: 100%;
-}
-.player-stats {
-  display: flex;
-  width: 33%;
-  height: 70%;
-}
-
-.code-editor-wrapper-spectator {
-  width: 67%;
-  height: 55%;
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-  flex-wrap: wrap;
-  margin-top: 16px;
+  flex: 1;
+  min-height: 300px;
 }
 
 .screen-bottom {
   display: flex;
-  height: 50%;
+  box-sizing: border-box;
+  flex: 1;
+}
+
+.spectator-player1 {
+  display: flex;
+  height: 100%;
+    flex: 1.4;
+}
+
+.spectator-player2 {
+  display: flex;
+  height: 100%;
+  flex: 1;
+}
+
+.player-components {
+  display: flex;
+}
+
+.player-stats {
+  display: flex;
+}
+
+.code-editor-wrapper-spectator {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  margin-bottom: 20px;
+  width: 100%;
 }
 
 .challenge-question-wrapper-spectator {
   display: flex;
-  height: 100%;
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 20px;
 }
 
 .game-chat-wrapper-spectator {
-  height: 100%;
-  min-height: 400px;
   width: 150%;
+}
+
+.main-spectator {
+  background-color: #63768D;
+  font-family: 'Roboto', sans-serif;
+  display: flex;
+  flex-wrap: wrap;
+  min-height: calc(100vh - 56px);
+  min-width: fit-content;
 }
