--- a/client/src/stylesheets/sidebar.scss
+++ b/client/src/stylesheets/sidebar.scss
@@ -1,13 +1,13 @@
 .sidebar-wrapper {
   display: flex;
-  max-height: 100%;;
-  // flex-direction: column;
-  // height: 100%;
+  max-height: 100%;
   background-color: #E4E6C3;
   flex: 1;
   max-width: 300px;
   min-width: 200px;
   overflow-y: scroll;
+  font-family: 'VT323', monospace;
+  font-size: 22px;
 }
 
 .user-list-wrapper {
