--- a/client/src/stylesheets/gamescreen.scss
+++ b/client/src/stylesheets/gamescreen.scss
@@ -96,7 +96,8 @@
 .game-chat-wrapper {
   display: flex;
   width: 100%;
-  height: 50%;
+  height: 20rem;
+  flex: 1;
 }
 
 #game-chat {
@@ -157,4 +158,9 @@
   justify-content: center;
   height: 100%;
   flex: 1;
+}
+
+.stats-title {
+  font-family: 'VT323', monospace;
+  font-size: 22px;
 }
