--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -22,7 +22,7 @@
   align-items: center;
   font-size: 48px;
   padding: 0rem 0rem;
-  margin-right: 3.5rem;
+  // margin-right: 3.5rem;
   &:hover {
     cursor: pointer;
   }
@@ -41,7 +41,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 650px) {
+@media only screen and (max-width: 655px) {
   .left-nav {
     display: none;
   }
@@ -49,18 +49,17 @@
   .other-left {
     display: block;
   }
-  
-  .logo-wrapper {
-    margin-right: 0;
-    margin-left: 3.5rem;
-  }
 }
 
-.logout-nav {
+.nav-buttons {
   display: flex;
+}
+
+.nav-button {
+  cursor: pointer;
   justify-self: center;
   align-items: center;
-  margin: 0 1rem;
+  margin: 0 0.5rem;
   padding: .25rem .750rem;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
@@ -70,7 +69,6 @@
   border-radius: 3px;
   &:hover {
     background-color: #575366;
-    cursor: pointer;
   }
 }
 
