--- a/client/src/stylesheets/chat.scss
+++ b/client/src/stylesheets/chat.scss
@@ -74,7 +74,7 @@
   width: 100%;
   height: 80px;
   min-height: 80px;
-  border-top: #0E1428 4px solid;
+  border: #0E1428 4px solid;
   box-sizing: border-box;
   background-color: #575366;
   display: flex;
