--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -26,26 +26,16 @@ html, body, #root {
   border-radius: 6px;
   border: 3px solid var(--scrollbarBG);
 }
+
 .main {
   background-color: #63768D;
   font-family: 'Roboto', sans-serif;
   display: flex;
-  flex-wrap: wrap;
-  height: fit-content;
+  height: inherit;
 }
 
-.main-sub {
+.global {
   display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-  height: 100vh;
-}
-
-.global-main {
-  box-sizing: content-box;
-  display: flex;
-  height: calc(100% - 56px);
-  max-height: calc(100% - 56px);
-  width: 100%;
-  overflow-y: hidden;
+  flex-direction: column;
+  height: inherit;
 }
