--- a/client/src/stylesheets/spectator.scss
+++ b/client/src/stylesheets/spectator.scss
@@ -1,34 +1,34 @@
 .spectator-wrapper {
   display: flex;
-  width: 100%;
-  box-sizing: border-box;
   flex-direction: column;
+  // width: inherit;
+  // height: inherit;
 }
 
 .screen-top {
   display: flex;
   justify-content: center;
   align-items: center;
-  flex: 1;
-  min-height: 300px;
+  height: 100%;
+  margin-bottom: 35px;
 }
 
 .screen-bottom {
   display: flex;
   box-sizing: border-box;
-  flex: 1;
+  height: 100%;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
 .spectator-player1 {
   display: flex;
   height: 100%;
-    flex: 1.4;
 }
 
 .spectator-player2 {
   display: flex;
   height: 100%;
-  flex: 1;
 }
 
 .player-components {
@@ -43,33 +43,22 @@
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  margin-bottom: 20px;
   width: 100%;
 }
 
 .challenge-question-wrapper-spectator {
-  display: flex;
-  // width: 100%;
+  padding: 10px 26px 0;
   flex: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
 }
 
 .game-chat-wrapper-spectator {
-  width: 20rem;
-  height: 28rem;
-  flex: 1;
   display: flex;
-  margin-top: 10px;
+  flex: 1;
+  padding-right: 20px;
 }
 
 .main-spectator {
   background-color: #63768D;
   font-family: 'Roboto', sans-serif;
   display: flex;
-  flex-wrap: wrap;
-  min-height: calc(100vh - 56px);
-  min-width: fit-content;
 }
