--- a/client/src/stylesheets/spectator.scss
+++ b/client/src/stylesheets/spectator.scss
@@ -39,6 +39,14 @@
   display: flex;
 }
 
+.stats-wrapper-spectator {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  flex: 1;
+}
+
 .code-editor-wrapper-spectator {
   display: flex;
   justify-content: center;
