--- a/client/src/stylesheets/gamescreen.scss
+++ b/client/src/stylesheets/gamescreen.scss
@@ -8,27 +8,26 @@
   justify-content: space-evenly;
   align-items: center;
   flex-direction: column;
-  flex-wrap: wrap;
   box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.2);
   padding: 7px;
   font-size: 18px;
-  height: 400px;
-  margin: 20px 26px 0;
-}
+  height: 100%;
+  padding: 1rem;
+  
+  h1 {
+    font-weight: 600;
+    border-bottom: 1px solid;
+  }
 
-.stats-wrapper {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  flex: 1;
+  * {
+    margin: 0.35rem 0;
+  }
 }
 
 .stats-players {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 50%;
 }
 
 .stats-form{
@@ -53,21 +52,25 @@
     color: #d4f2d2;
     
   }
+
   .stats{
-  text-align: left;
-  padding: 5px;
-  height: 180px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
+    margin: 1rem 0;
+    text-align: left;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
   }
+}
+
+.stats > h2 {
+  margin: 0.3rem 0;
 }
 
 .game-screen {
   display: flex;
   width: 100%;
   box-sizing: border-box;
-  min-height: calc(100vh - 56px);
 }
 
 .game-left {
@@ -75,10 +78,9 @@
   justify-content: space-between;
   align-items: center;
   flex-direction: column;
-  // min-width: 500px;
   flex: 1;
+  padding: 20px;
   box-sizing: border-box;
-  // min-height: 600px;
 }
 
 .game-right {
@@ -89,7 +91,7 @@
   min-width: 500px;
   box-sizing: border-box;
   flex: 1;
-  // min-height: 600px;
+  padding: 20px;
   background-color: #63768D;
 }
 
@@ -107,7 +109,7 @@
 .code-editor-wrapper {
   display: flex;
   align-items: center;
-  flex: 1.5;
+  flex: 1;
   flex-direction: column;
   width: 95%;
   max-width: 800px;
@@ -123,21 +125,21 @@
 
 .stats-results {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: space-between;
   margin-top: 10px;
-  flex-wrap: wrap;
   h2 {
     width: 60%;
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
     align-self: center;
     font-size: 16px;
     background-color: #D4F2D2;
     color: #0E1428;
     border-radius: 4px;
-    padding: 3px 0;
-    margin-bottom: 8px;;
+    padding: 3px 6px;
+    // margin: 0 1rem 8px;
+    margin-bottom: 8px;
     &:hover {
       cursor: pointer;
     }
@@ -148,15 +150,21 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  align-self: flex-end;
+  margin-bottom: 2rem;
   width: 80%;
 }
 
-.player-stats-game-wrapper {
+.stats-wrapper {
   display: flex;
   align-items: center;
   width: 100%;
-  justify-content: center;
+  justify-content: space-around;
   height: 100%;
+  flex: 1;
+}
+
+.stats-wrapper > div {
   flex: 1;
 }
 
