--- a/client/src/stylesheets/splash.scss
+++ b/client/src/stylesheets/splash.scss
@@ -83,6 +83,8 @@
   top: 0;
   left: 0;
   z-index: 3;
+  background-color: #575366;
+
 
   width: 100%;
   height: 100%;
@@ -97,18 +99,37 @@
 
 .card_part.card_part-2 {
   z-index: 4;
-  background-color: #575366;
   background-image: none;
 }
 
 .card_part.card_part-3 {
   z-index: 5;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/3.jpg?raw=true );
+  background-image: none;
 }
 
 .card_part.card_part-4 {
+  z-index: 4;
+  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/challenge.gif );
+}
+
+.card_part.card_part-5 {
   z-index: 6;
-  background-image: url( https://github.com/Flat-Pixels/assets_hosting/blob/master/picture_slides/4.jpg?raw=true );
+  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/acceptchallenge.gif );
+}
+
+.card_part.card_part-6 {
+  z-index: 6;
+  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/follow.gif );
+}
+
+.card_part.card_part-7 {
+  z-index: 6;
+  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/smacktalk.gif );
+}
+
+.card_part.card_part-8 {
+  z-index: 6;
+  background-image: none;
 }
 
 .card-out {
@@ -134,7 +155,7 @@
 
 .flex-start {
   align-items: flex-start;
-}
+};
 
 // @keyframes opaqTransition {
 //   3% { transform: translateX( 0 ); }
