--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -23,7 +23,7 @@
   align-items: center;
   font-size: 48px;
   padding: 0rem 0rem;
-  margin-right: 3.5rem;
+  margin-left: 3rem;
   width: 15%;
   &:hover {
     cursor: pointer;
