--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -11,5 +11,6 @@
 @import "gamechat.scss";
 @import "spectator.scss";
 @import "splash.scss";
+@import "tour.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
