Style all of the lobby tour messages

--- a/client/src/stylesheets/tour.scss
+++ b/client/src/stylesheets/tour.scss
@@ -1,7 +1,7 @@
 .lobby-sidebar {
+  z-index: 100;
   display: flex;
   justify-content: space-between;
-  // align-items: center;
   position: fixed;
   width: 15rem;
   height: 10rem;
@@ -11,12 +11,30 @@
   color: #D4F2D2;
 }
 
-.lobby-chat {
-
+.lobby-button {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: column;
+  position: fixed;
+  width: 15rem;
+  height: 10rem;
+  right: 1rem;
+  top: 4.7rem;
+  font-family: 'Roboto', sans-serif;
+  color: #D4F2D2;
 }
 
-.lobby-button {
-
+.lobby-chat {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  position: fixed;
+  width: 15rem;
+  height: 10rem;
+  left: 20rem;
+  bottom: 5.6rem;
+  font-family: 'Roboto', sans-serif;
+  color: #D4F2D2;
 }
 
 .tour-text-wrapper {
@@ -38,11 +56,25 @@
   font-size: 1.2rem;
 }
 
-.tour-arrow {
+.tour-arrow-left {
   font-size: 2rem;
   color: #0E1428;
-  animation: slide1 1s ease-in-out infinite;
+  animation: left-right 1s ease-in-out infinite;
   margin-right: 9px;
+}
+
+.tour-arrow-up {
+  font-size: 2rem;
+  color: #0E1428;
+  animation: up-down 1s ease-in-out infinite;
+  margin-left: 12rem;
+}
+
+.tour-arrow-down {
+  font-size: 2rem;
+  color: #0E1428;
+  animation: up-down 1s ease-in-out infinite;
+  margin-top: 1rem;
 }
 
 .code-duel {
@@ -59,18 +91,17 @@
   background-color: #0E1428;
   border: 1px solid #6E7DAB;
   &:hover {
-    
     background-color: #6E7DAB;
     color: #D4F2D2;
     border: 1px solid #D4F2D2;
   }
 }
 
-// #575366
-// #6E7DAB
-// #32292F
+.tour-modal-hidden {
+  display: none;
+}
 
-@keyframes slide1 {
+@keyframes left-right {
   0%,
   100% {
     transform: translate(0, 0);
@@ -78,5 +109,16 @@
 
   50% {
     transform: translate(-15px, 0);
+  }
+}
+
+@keyframes up-down {
+  0%,
+  100% {
+    transform: translate(0, 0);
+  }
+
+  50% {
+    transform: translate(0, -15px);
   }
 }
