Re do the welcome gif

--- a/client/src/stylesheets/splash.scss
+++ b/client/src/stylesheets/splash.scss
@@ -91,7 +91,7 @@
   
   transform: translateX(1050px);
 
-  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/mranderson.gif );
+  background-image: url( https://codedueler.s3.us-east-2.amazonaws.com/welcome.gif );
   background-position: center;
   background-size: cover;
   transition: cubic-bezier(0, 0, 0.2, 1) 1.3s;
