update images and css

--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -43,3 +43,9 @@ html,body {
   height: inherit;
   width: inherit;
 }
+
+.vertical-half {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
