Make game screen tour modals more responsive

--- a/client/src/stylesheets/tour.scss
+++ b/client/src/stylesheets/tour.scss
@@ -43,7 +43,7 @@
   position: fixed;
   width: 18rem;
   height: 10rem;
-  right: 58rem;
+  left: 35%;
   top: 7rem;
   font-family: 'Roboto', sans-serif;
   color: #D4F2D2;
@@ -68,8 +68,8 @@
   position: fixed;
   width: 18rem;
   height: 10rem;
-  left: 41rem;
-  top: 23.5rem;
+  left: 35%;
+  top: 40%;
   font-family: 'Roboto', sans-serif;
   color: #D4F2D2;
 }
@@ -82,8 +82,8 @@
   position: fixed;
   width: 18rem;
   height: 12rem;
-  left: 20.25rem;
-  bottom: 9.8rem;
+  left: 17.5%;
+  top: 54%;
   font-family: 'Roboto', sans-serif;
   color: #D4F2D2;
 }
