--- a/client/src/stylesheets/application.scss
+++ b/client/src/stylesheets/application.scss
@@ -12,5 +12,6 @@
 @import "spectator.scss";
 @import "splash.scss";
 @import "tour.scss";
+@import "credits.scss";
 @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');
