--- a/client/src/stylesheets/tour.scss
+++ b/client/src/stylesheets/tour.scss
@@ -1,3 +1,8 @@
+.tour-wrapper {
+  font-family: 'Roboto', sans-serif;
+  color: #D4F2D2;
+}
+
 .lobby-sidebar {
   display: flex;
   justify-content: space-between;
@@ -6,8 +11,6 @@
   height: 10rem;
   left: 10rem;
   top: 3.6rem;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .lobby-button {
@@ -19,8 +22,6 @@
   height: 10rem;
   right: 1rem;
   top: 4.7rem;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .lobby-chat {
@@ -32,8 +33,6 @@
   height: 10rem;
   left: 20rem;
   bottom: 5.6rem;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .game-challenge {
@@ -45,8 +44,6 @@
   height: 10rem;
   left: 35%;
   top: 7rem;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .game-editor {
@@ -57,8 +54,6 @@
   height: 10rem;
   left: 20rem;
   top: 7rem;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .game-submit {
@@ -70,8 +65,6 @@
   height: 10rem;
   left: 35%;
   top: 40%;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .game-stats {
@@ -84,8 +77,6 @@
   height: 12rem;
   left: 17.5%;
   top: 54%;
-  font-family: 'Roboto', sans-serif;
-  color: #D4F2D2;
 }
 
 .tour-text-wrapper {
