add user status icons and appurtenant tooltips

--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -49,3 +49,11 @@ html,body {
   flex-direction: column;
   justify-content: space-between;
 }
+
+.hidden {
+  display: none;
+}
+
+.visible {
+  display: block;
+}
