add players/spectators section to in-game lobby sidebar

--- a/client/src/stylesheets/main.scss
+++ b/client/src/stylesheets/main.scss
@@ -57,3 +57,11 @@ html,body {
 .visible {
   display: block;
 }
+
+.pointer {
+  cursor: pointer !important;
+}
+
+.cursor-default {
+  cursor: default;
+}
