--- a/client/src/stylesheets/modal.scss
+++ b/client/src/stylesheets/modal.scss
@@ -9,7 +9,6 @@
 }
 
 .modal {
-  display: block;
   width: 600px;
   max-width: 100%;
   height: 400px;
@@ -38,7 +37,7 @@
   align-items: center;
   flex-direction: column;
   height: 150px;
-  width: 350px;
+  width: 80%;
   h1 {
     font-size: 50px;
     font-weight: 700;
@@ -51,7 +50,7 @@
     font-size: 18px;
     font-weight: 700;
     p {
-      display: inline-block;
+      display: block;
       font-weight: 700;
       font-size: 36px;
       font-family: 'VT323', monospace;
