--- a/client/src/stylesheets/session.scss
+++ b/client/src/stylesheets/session.scss
@@ -61,7 +61,11 @@
   justify-self: center;
   align-items: center;
   border-radius: 3px;
-  margin: 20px 0 30px 0;
+  margin: 0px 0 30px 0;
+}
+
+.session-button:first-of-type {
+  margin-top: 20px;
 }
 
 .session-errors {
