--- a/client/src/stylesheets/nav.scss
+++ b/client/src/stylesheets/nav.scss
@@ -11,6 +11,7 @@
   z-index: 3;
   position: fixed;
   width: 100vw;
+  padding: 0 1rem;
 }
 
 .nav-bar-spacer {
@@ -18,14 +19,19 @@
 }
 
 .logo-wrapper {
+  // position: relative;
+  width: fit-content;
+  position: absolute;
+  top: 2px;
+  left: calc(50vw - 96px);
+}
+
+.logo-nav {
   display: flex;
   justify-self: center;
   align-items: center;
   font-size: 48px;
   padding: 0rem 0rem;
-  // margin-right: 3.5rem;
-  // margin-left: 9rem;
-  // width: 15%;
   &:hover {
     cursor: pointer;
   }
@@ -35,7 +41,6 @@
   display: flex;
   justify-self: center;
   align-items: center;
-  margin: 0 1rem;
   padding: .25rem .250rem;
   font-size: 26px;
 }
@@ -44,7 +49,7 @@
   display: none;
 }
 
-@media only screen and (max-width: 655px) {
+@media only screen and (max-width: 680px) {
   .left-nav {
     display: none;
   }
@@ -52,9 +57,15 @@
   .other-left {
     display: block;
   }
+  
+  .logo-wrapper {
+    left: unset;
+    right: 12px;
+  }
 }
 
 .nav-buttons {
+  content: unset;
   display: flex;
 
   >div {
@@ -78,6 +89,38 @@
   border-radius: 3px;
   &:hover {
     background-color: #575366;
+  }
+}
+
+.nav-burger {
+  position: relative;
+  cursor: pointer;
+}
+
+.burger-content {
+  cursor: default;
+  position: absolute;
+  right: 0;
+  background-color: #32292F;
+  border: 1px solid #E4E6C3;
+  box-shadow: 0 0 3px #63768D;
+  height: fit-content;
+  padding: 0.5rem 0;
+  width: 150px;
+  display: flex;
+  flex-direction: column;
+}
+
+.burger-content > * > * {
+  background-color: #32292F;
+  border: unset;
+}
+
+
+@media only screen and (max-width: 610px) {
+  .burger-content {
+    right: unset;
+    left: 0;
   }
 }
 
